Fix overflow

--- a/sources/sass/partials/_layout.scss
+++ b/sources/sass/partials/_layout.scss
@@ -43,8 +43,6 @@ body {
 .view {
   -webkit-overflow-scrolling: touch;
   height: 100%;
-  overflow-x: hidden;
-  overflow-y: auto;
   position: relative;
   width: 100%;
 }
